--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
     <div class="cotainer">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Recipe</a>
+          <a class="navbar-brand" href="/">Generate Inspiration</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -50,7 +50,7 @@
             {% if session["user_id"] %}
             <ul class="navbar-nav me-auto mt-2">
               <li class="nav-item">
-                <a class="nav-link" href="/pantry">Pantry</a>
+                <a class="nav-link" href="/pantry">Update Pantry</a>
               </li>
             </ul>
             <ul class="navbar-nav ms-auto mt-2">
